data/all_generated_tests/raw_wast_tests/nop_StackCorruption_134.wast
;; 5. **Test Description**:     Implement a sequence of stack manipulation operations (e.g., `push`, `pop`, `dup`) interspersed with `nop` instructions. Validate that the resulting stack state is accurate.    **Constraint**: `nop` should not interfere with direct stack manipulation instructions.    **Reasoning**: Ensures stack operations remain precise and corruption-free even with `nop` interspersed.

(assert_invalid
  (module (func (local i32) i32.const 1 nop drop local.get 0 nop))
  "stack type mismatch"
)